--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -474,7 +474,7 @@ Enable rounding of window corners
 **** Shaders
 Enable a screen shader based on the provided shadder file. In this case the provided file is a shader file which enables a greyscale effect. 
 #+begin_src conf :tangle hyprland.conf
-     ######screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+     ####screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 #+end_src
 
 bellow is an example of this shader in action:
@@ -505,7 +505,8 @@ Configure blur and drop shadow. These settings are currently disabled; though i 
 Decorations for when windows are grouped together.
 #+begin_src conf :tangle hyprland.conf
   group {
-        col.border_active = rgba(bd93f9ff) rgba(ff79c6ff) rgba(ffb86caa) rgba(8be9fdaa) 45deg
+        #col.border_active = rgba(bd93f9ff) rgba(ff79c6ff) rgba(ffb86caa) rgba(8be9fdaa) 45deg
+        col.border_active = rgba(bd93f9ff) rgba(8be9fdaa) 45deg
       groupbar {
           enabled = true
           gradients = true
