--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -475,7 +475,7 @@ Enable rounding of window corners
 **** Shaders
 Enable a screen shader based on the provided shadder file. In this case the provided file is a shader file which enables a greyscale effect. 
 #+begin_src conf :tangle hyprland.conf
-     #######screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+     ########screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 #+end_src
 
 bellow is an example of this shader in action:
@@ -693,6 +693,6 @@ This example is not synced to my runnning config.
 #+auto_tangle: t
 #+options: num:nil noexport
 #+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup
-#+export_file_name: ~/Documents/html/system/hyprland.html
+#+export_file_name: ~/Documents/html/docs/hyprland-dracula.html
 #+title: HD's Hyprland Config
 #+author: Henry Davies (HD)
