--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -65,6 +65,7 @@ This section includes links to the configuration files used by /non Hyprland/ pa
   $mainMod = SUPER
   $terminal = kitty
   $menu = rofi -show drun run combi
+  $filemenu = rofi -show recursivebrowser filebrowser 
 #+end_src
 
 /Less/ essential environment variables
@@ -251,6 +252,7 @@ These are keybindings which are critical for proper system functionality
   bind = $mainMod, M, exec, $fileManager
   bind = $mainMod, V, togglefloating, 
   bind = $mainMod, D, exec, $menu
+  bind = $mainMod $shiftmod, D, exec, $filemenu
   bind = $mainMod $shiftMod, C, exec, launch-waybar && launch-nwg-wrapper 
 #+end_src
 
@@ -475,7 +477,7 @@ Enable rounding of window corners
 **** Shaders
 Enable a screen shader based on the provided shadder file. In this case the provided file is a shader file which enables a greyscale effect. 
 #+begin_src conf :tangle hyprland.conf
-     ##screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+     #####screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 #+end_src
 
 bellow is an example of this shader in action:
