--- a/waybar/waybar.org
+++ b/waybar/waybar.org
@@ -767,3 +767,9 @@ styling for submodes like window resizing or screenshot menus. I don't use this 
 #+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup
 #+export_file_name: ~/Documents/html/docs/waybar-dracula.html
 
+1. specify the background color, and font color fo source code blocks
+#+HTML_HEAD: <style>pre.src{background:#282a36;color:white;} </style>
+
+2. Specify the background color of code blocks. In my case these somewhat interchangable with regualar quotes, as most of the extensive code is placed in source code blocks. 
+#+HTML_HEAD: <style>code{background:#f8f8f2;color:#6272a4;} </style>
+#+HTML_HEAD: <style>ul{background:#f8f8f2;} </style>
