--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -409,9 +409,9 @@ submap = Screencopy
 #+end_src
 **** Hyprshot
 #+begin_src conf :tangle hyprland.conf
- bind =, O, exec, hyprshot --freeze -m output -t 7500
- bind =, W, exec, hyprshot --freeze -m window -t 7500
- bind =, R, exec, hyprshot --freeze -m region -t 7500
+ bind =, O, exec, hyprshot --freeze -m output -t 7500 -o ~/Pictures/Screenshots/
+ bind =, W, exec, hyprshot --freeze -m window -t 7500 -o ~/Pictures/Screenshots/
+ bind =, R, exec, hyprshot --freeze -m region -t 7500 -o ~/Pictures/Screenshots/
 #+end_src
 
 **** Color Picker
@@ -513,7 +513,7 @@ Enable rounding of window corners
 **** Shaders
 Enable a screen shader based on the provided shadder file. In this case the provided file is a shader file which enables a greyscale effect. 
 #+begin_src conf :tangle hyprland.conf
-     #####screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+     #screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 #+end_src
 
 bellow is an example of this shader in action:
