--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -253,7 +253,7 @@ These are keybindings which are critical for proper system functionality
   bind = $mainMod, V, togglefloating, 
   bind = $mainMod, D, exec, $menu
   bind = $mainMod $shiftmod, D, exec, $filemenu
-  bind = $mainMod $shiftMod, C, exec, launch-waybar && launch-nwg-wrapper 
+  bind = $mainMod $shiftmod, C, exec, ~/dotfiles/hypr/scripts/reloads.sh
 #+end_src
 
 **** Important
@@ -513,7 +513,7 @@ Enable rounding of window corners
 **** Shaders
 Enable a screen shader based on the provided shadder file. In this case the provided file is a shader file which enables a greyscale effect. 
 #+begin_src conf :tangle hyprland.conf
-     ###################screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+     ####screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 #+end_src
 
 bellow is an example of this shader in action:
